[gd_scene load_steps=32 format=3 uid="uid://c6mxpi8t4sgng"]

[ext_resource type="PackedScene" uid="uid://054lnswde7g0" path="res://scenes/over_world_tilemap.tscn" id="1_i2fgc"]
[ext_resource type="Script" path="res://scripts/Village1.gd" id="2_6cpwl"]
[ext_resource type="PackedScene" uid="uid://ds55apat6kv6b" path="res://scenes/npc.tscn" id="3_3hgnt"]
[ext_resource type="Texture2D" uid="uid://dhpw6kew851yv" path="res://assets/NinjaAdventure(SupporterEdition)/Actor/Characters/OldWoman/SpriteSheet.png" id="4_hdabu"]
[ext_resource type="PackedScene" uid="uid://dh8v12a1kd6r2" path="res://scenes/dialogue_area.tscn" id="5_n3uyx"]
[ext_resource type="Resource" uid="uid://kh1c57wq7jrq" path="res://resources/dialogue/village_1.dialogue" id="6_m6l4g"]
[ext_resource type="Texture2D" uid="uid://dws8gp4mybc1p" path="res://assets/NinjaAdventure(SupporterEdition)/Actor/Characters/Villager3/SpriteSheet.png" id="7_87xhp"]
[ext_resource type="Texture2D" uid="uid://uwloavlwilfx" path="res://assets/NinjaAdventure(SupporterEdition)/Actor/Characters/OldMan3/SpriteSheet.png" id="8_b8lft"]
[ext_resource type="Texture2D" uid="uid://ceywgv8sa3ek0" path="res://assets/NinjaAdventure(SupporterEdition)/Actor/Characters/OldMan2/SpriteSheet.png" id="9_ff27y"]
[ext_resource type="Script" path="res://scripts/village_1_cat.gd" id="10_14d4f"]
[ext_resource type="Texture2D" uid="uid://cmk7mynprjt6g" path="res://assets/NinjaAdventure(SupporterEdition)/Actor/Animals/Cat/SpriteSheet.png" id="11_bwl57"]
[ext_resource type="Texture2D" uid="uid://days6pmichcfu" path="res://assets/NinjaAdventure(SupporterEdition)/Actor/Characters/Knight/SpriteSheet.png" id="12_qo57x"]
[ext_resource type="PackedScene" uid="uid://bq54bue2r7uul" path="res://scenes/pickupable_item.tscn" id="13_bnj0m"]
[ext_resource type="Texture2D" uid="uid://ojabqcf5coxs" path="res://assets/NinjaAdventure(SupporterEdition)/Items/Potion/MilkPot.png" id="14_veh2r"]
[ext_resource type="Resource" uid="uid://di4d585s86k28" path="res://resources/items/roes_milk.tres" id="15_joo3o"]
[ext_resource type="Script" path="res://scripts/items/roes_mlik.gd" id="15_r0a7w"]
[ext_resource type="Texture2D" uid="uid://dxvd8slto7hiy" path="res://assets/NinjaAdventure(SupporterEdition)/Items/Weapons/Sword2/Sprite.png" id="16_ac8ec"]
[ext_resource type="Resource" uid="uid://oael15dgs2iu" path="res://resources/items/Sword.tres" id="17_v0dhn"]
[ext_resource type="PackedScene" uid="uid://8c5o8vfo37sy" path="res://scenes/skeleton.tscn" id="18_46t7w"]
[ext_resource type="Script" path="res://scripts/village1_monsters.gd" id="18_megqn"]
[ext_resource type="PackedScene" uid="uid://dlt2odp4oycd" path="res://scenes/transition.tscn" id="19_hrqen"]
[ext_resource type="PackedScene" uid="uid://dlx23fu2unagq" path="res://scenes/player_room.tscn" id="20_c065v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bqob7"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n8cua"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gbje6"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fuxvj"]
radius = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w678l"]
radius = 6.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71btn"]
size = Vector2(32, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_rrg04"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bf5yt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bwyj"]
size = Vector2(14, 11)

[node name="OverWorld" type="Node2D" groups=["active_scene"]]
y_sort_enabled = true

[node name="OverWorldTilemap" parent="." instance=ExtResource("1_i2fgc")]
metadata/_edit_lock_ = true

[node name="Village1" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("2_6cpwl")

[node name="NPCs" type="Node2D" parent="Village1"]
y_sort_enabled = true

[node name="Ashley" parent="Village1/NPCs" instance=ExtResource("3_3hgnt")]
position = Vector2(1272, 2784)
metadata/_edit_lock_ = true

[node name="Sprite2D" parent="Village1/NPCs/Ashley" index="0"]
texture = ExtResource("4_hdabu")
vframes = 2

[node name="CollisionShape2D" parent="Village1/NPCs/Ashley" index="1"]
position = Vector2(0.5, 5.5)

[node name="DialogueArea" parent="Village1/NPCs/Ashley" instance=ExtResource("5_n3uyx")]
dialogue_resource = ExtResource("6_m6l4g")
dialogue_start = "Ashley"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Village1/NPCs/Ashley/DialogueArea"]
shape = SubResource("CircleShape2D_bqob7")

[node name="Jill" parent="Village1/NPCs" instance=ExtResource("3_3hgnt")]
position = Vector2(1800, 2776)
metadata/_edit_lock_ = true

[node name="Sprite2D" parent="Village1/NPCs/Jill" index="0"]
texture = ExtResource("7_87xhp")

[node name="DialogueArea" parent="Village1/NPCs/Jill" instance=ExtResource("5_n3uyx")]
dialogue_resource = ExtResource("6_m6l4g")
dialogue_start = "Jill"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Village1/NPCs/Jill/DialogueArea"]
shape = SubResource("CircleShape2D_n8cua")

[node name="Chief Dave" parent="Village1/NPCs" instance=ExtResource("3_3hgnt")]
position = Vector2(1488, 3008)
metadata/_edit_lock_ = true

[node name="Sprite2D" parent="Village1/NPCs/Chief Dave" index="0"]
texture = ExtResource("8_b8lft")

[node name="DialogueArea" parent="Village1/NPCs/Chief Dave" instance=ExtResource("5_n3uyx")]
dialogue_resource = ExtResource("6_m6l4g")
dialogue_start = "Chief_Dave"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Village1/NPCs/Chief Dave/DialogueArea"]
shape = SubResource("CircleShape2D_gbje6")

[node name="Roe" parent="Village1/NPCs" instance=ExtResource("3_3hgnt")]
position = Vector2(1424, 2856)
metadata/_edit_lock_ = true

[node name="Sprite2D" parent="Village1/NPCs/Roe" index="0"]
texture = ExtResource("9_ff27y")

[node name="DialogueArea" parent="Village1/NPCs/Roe" instance=ExtResource("5_n3uyx")]
dialogue_resource = ExtResource("6_m6l4g")
dialogue_start = "Roe"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Village1/NPCs/Roe/DialogueArea"]
shape = SubResource("CircleShape2D_fuxvj")

[node name="Cat" parent="Village1/NPCs" instance=ExtResource("3_3hgnt")]
position = Vector2(1512, 3080)
script = ExtResource("10_14d4f")
metadata/_edit_lock_ = true

[node name="Sprite2D" parent="Village1/NPCs/Cat" index="0"]
position = Vector2(0, -8)
texture = ExtResource("11_bwl57")
hframes = 2
vframes = 1
metadata/_edit_lock_ = true

[node name="CollisionShape2D" parent="Village1/NPCs/Cat" index="1"]
shape = null

[node name="DialogueArea" parent="Village1/NPCs/Cat" instance=ExtResource("5_n3uyx")]
position = Vector2(0, -8)
dialogue_resource = ExtResource("6_m6l4g")
dialogue_start = "cat"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Village1/NPCs/Cat/DialogueArea"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_w678l")
metadata/_edit_lock_ = true

[node name="Yellow (Town Guard)" parent="Village1/NPCs" instance=ExtResource("3_3hgnt")]
position = Vector2(1608, 2728)

[node name="Sprite2D" parent="Village1/NPCs/Yellow (Town Guard)" index="0"]
texture = ExtResource("12_qo57x")
metadata/_edit_lock_ = true

[node name="DialogueArea" parent="Village1/NPCs/Yellow (Town Guard)" instance=ExtResource("5_n3uyx")]
dialogue_resource = ExtResource("6_m6l4g")
dialogue_start = "Yellow_Town_Guard"
start_automatic = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Village1/NPCs/Yellow (Town Guard)/DialogueArea"]
position = Vector2(-8, 4)
shape = SubResource("RectangleShape2D_71btn")
metadata/_edit_lock_ = true

[node name="Items" type="Node2D" parent="Village1"]

[node name="Roes Milk" parent="Village1/Items" instance=ExtResource("13_bnj0m")]
position = Vector2(1438, 2816)
texture = ExtResource("14_veh2r")
script = ExtResource("15_r0a7w")
item = ExtResource("15_joo3o")

[node name="Area2D" parent="Village1/Items/Roes Milk" index="0"]
metadata/_edit_lock_ = true

[node name="@CollisionShape2D@56764" type="CollisionShape2D" parent="Village1/Items/Roes Milk/Area2D" index="0"]
shape = SubResource("CircleShape2D_rrg04")
metadata/_edit_lock_ = true

[node name="Sword" parent="Village1/Items" instance=ExtResource("13_bnj0m")]
position = Vector2(2008, 2808)
rotation = 0.588909
texture = ExtResource("16_ac8ec")
item = ExtResource("17_v0dhn")

[node name="Area2D" parent="Village1/Items/Sword" index="0"]
metadata/_edit_lock_ = true

[node name="@CollisionShape2D@56765" type="CollisionShape2D" parent="Village1/Items/Sword/Area2D" index="0"]
shape = SubResource("CircleShape2D_bf5yt")
metadata/_edit_lock_ = true

[node name="Monsters" type="Node2D" parent="Village1"]
y_sort_enabled = true
script = ExtResource("18_megqn")

[node name="Skeleton" parent="Village1/Monsters" instance=ExtResource("18_46t7w")]
position = Vector2(2160, 2822)

[node name="Skeleton2" parent="Village1/Monsters" instance=ExtResource("18_46t7w")]
position = Vector2(2120, 2784)

[node name="Skeleton3" parent="Village1/Monsters" instance=ExtResource("18_46t7w")]
position = Vector2(2120, 2896)

[node name="Skeleton4" parent="Village1/Monsters" instance=ExtResource("18_46t7w")]
position = Vector2(2096, 2961)

[node name="Skeleton5" parent="Village1/Monsters" instance=ExtResource("18_46t7w")]
position = Vector2(2152, 2960)

[node name="Transitions" type="Node2D" parent="Village1"]

[node name="PlayerHouseTransition" parent="Village1/Transitions" node_paths=PackedStringArray("replace") instance=ExtResource("19_hrqen")]
position = Vector2(1256, 2841)
scene = ExtResource("20_c065v")
replace = NodePath("../../..")
spawn_position = Vector2(40, 75)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Village1/Transitions/PlayerHouseTransition"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_2bwyj")

[connection signal="child_exiting_tree" from="Village1/Monsters" to="Village1" method="_on_monsters_child_exiting_tree"]

[editable path="Village1/NPCs/Ashley"]
[editable path="Village1/NPCs/Jill"]
[editable path="Village1/NPCs/Chief Dave"]
[editable path="Village1/NPCs/Roe"]
[editable path="Village1/NPCs/Cat"]
[editable path="Village1/NPCs/Yellow (Town Guard)"]
[editable path="Village1/NPCs/Yellow (Town Guard)/DialogueArea"]
[editable path="Village1/Items/Roes Milk"]
[editable path="Village1/Items/Sword"]
